fix(exercizer): #WB-645, fix small editor overflow issue

--- a/scss/specifics/exercizer/_exercizer.scss
+++ b/scss/specifics/exercizer/_exercizer.scss
@@ -568,7 +568,7 @@ body.exercizer {
     width: 100%;
     max-height: 100px !important;
     min-height: 100px !important;
-    overflow-y: scroll;
+    overflow-y: auto;
   }
 
   editor.small-editor.edit [contenteditable]:focus {
